...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileImg" translatesAutoresizingMaskIntoConstraints="NO" id="4Am-cK-CyS">
                                                    <rect key="frame" x="6" y="0.0" width="130" height="130"/>
                                                    <constraints>
...
        <scene sceneID="6az-cq-VYl">
            <objects>
                <viewController storyboardIdentifier="MyMenteeCalendar" title="Mentee" id="26a-tm-cnJ" customClass="MyMenteeHistoryViewController" customModule="Trajectory" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="VKp-cB-b7r">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                                <rect key="frame" x="309" y="45" width="50" height="50"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" image="calendarIcon"/>
                                <connections>
                                    <action selector="sendToCalendar:" destination="26a-tm-cnJ" eventType="touchUpInside" id="dWo-cp-WMr"/>
...
        <scene sceneID="PJ0-S2-8vR">
            <objects>
                <viewController storyboardIdentifier="MyMentorCheckin" title="Mentor" id="lS1-f0-5VY" customClass="MyMentorCheckinViewController" customModule="Trajectory" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="64e-xb-ANH">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.46220868825912476" green="0.9423871636390686" blue="0.076337583363056183" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="Doing Well">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.9983641505241394" green="0.91026431322097778" blue="0.20300933718681335" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="Alright">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.93059724569320679" green="0.27452105283737183" blue="0.18561512231826782" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="Not Good">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <color key="titleShadowColor" red="0.93059724569320679" green="0.27452105283737183" blue="0.18561512231826782" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <state key="normal" title="Contact Mentor">
                                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                    </state>
...
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <state key="normal" title="Cancel Mentorship">
                                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                    </state>
...
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <state key="normal" title="Request New End Date">
                                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                    </state>
...
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <state key="normal" title="Set New End Date">
                                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    </state>
...
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <state key="normal" title="Contact Mentee">
                                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    </state>
...
        <scene sceneID="QVa-qx-dfJ">
            <objects>
                <viewController storyboardIdentifier="CommMentee" title="Mentees" id="NM9-48-Kon" customClass="CommMenteeViewController" customModule="Trajectory" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="1pY-AZ-Q2N">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
        <scene sceneID="oV7-he-dBn">
            <objects>
                <viewController storyboardIdentifier="CommMentor" title="Mentors" id="Et3-zS-Hw4" customClass="CommMentorViewController" customModule="Trajectory" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="vgo-be-yTr">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Gjd-0L-C81" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Community" image="Comm-48" selectedImage="Comm-48" id="k04-ff-nlu">
                        <color key="badgeColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </tabBarItem>
...
